Add notification system and portfolio management features with DTOs and view models